--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "@babel/plugin-proposal-decorators": "^7.19.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
     "@faker-js/faker": "^7.6.0",
-    "@sentry/browser": "^7.63.0",
-    "@sentry/node": "^7.63.0",
+    "@sentry/browser": "^7.64.0",
+    "@sentry/node": "^7.64.0",
     "@sentry/profiling-node": "^1.1.2",
-    "@sentry/tracing": "7.63.0",
+    "@sentry/tracing": "^7.64.0",
     "@types/xlsx": "^0.0.36",
     "async-mutex": "^0.4.0",
     "aws-sdk": "^2.1209.0",
